--- a/delphi/hsae_script.ipynb
+++ b/delphi/hsae_script.ipynb
@@ -2,17 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'delphi-3SSBaoV0-py3.11 (Python 3.11.5)' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/Users/fdraye/Library/Caches/pypoetry/virtualenvs/delphi-3SSBaoV0-py3.11/bin/python -m pip install ipykernel -U --force-reinstall'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/fdraye/projects/hdelphi/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO 03-22 12:22:30 [__init__.py:260] No platform detected, vLLM is running on UnspecifiedPlatform\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-03-22 12:22:31,480\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n",
+      "/home/fdraye/projects/hdelphi/.venv/lib/python3.11/site-packages/torch/cuda/__init__.py:936: UserWarning: CUDA initialization: The NVIDIA driver on your system is too old (found version 8000). Please update your GPU driver by downloading and installing a new version from the URL: http://www.nvidia.com/Download/index.aspx Alternatively, go to: https://pytorch.org to install a PyTorch version that has been compiled with your version of the CUDA driver. (Triggered internally at /pytorch/c10/cuda/CUDAFunctions.cpp:109.)\n",
+      "  r = torch._C._cuda_getDeviceCount() if nvml_count < 0 else nvml_count\n",
+      "The installed version of bitsandbytes was compiled without GPU support. 8-bit optimizers, 8-bit multiplication, and GPU quantization are unavailable.\n"
      ]
     }
    ],
@@ -34,7 +49,40 @@
     "    PreTrainedModel,\n",
     "    PreTrainedTokenizer,\n",
     "    PreTrainedTokenizerFast,\n",
-    ")"
+    ")\n",
+    "\n",
+    "from delphi.clients import Offline, OpenRouter\n",
+    "from delphi.config import RunConfig\n",
+    "from delphi.explainers import DefaultExplainer\n",
+    "from delphi.latents import LatentCache, LatentDataset\n",
+    "from delphi.latents.neighbours import NeighbourCalculator\n",
+    "from delphi.log.result_analysis import log_results\n",
+    "from delphi.pipeline import Pipe, Pipeline, process_wrapper\n",
+    "from delphi.scorers import DetectionScorer, FuzzingScorer\n",
+    "from delphi.sparse_coders import load_hooks_sparse_coders, load_sparse_coders\n",
+    "from delphi.utils import assert_type\n",
+    "from delphi.config import CacheConfig, ConstructorConfig, RunConfig, SamplerConfig\n",
+    "from sae_lens import SAE, HookedSAETransformer\n",
+    "\n",
+    "from delphi.hsae_utils import populate_cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "login3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import socket\n",
+    "print(socket.gethostname())\n"
    ]
   },
   {
@@ -47,13 +95,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "delphi-3SSBaoV0-py3.11",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.5"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
